--- a/commons/js/tests/webapp_mock/webapp.html
+++ b/commons/js/tests/webapp_mock/webapp.html
@@ -1,7 +1,12 @@
 <html>
 <head>
     <link rel="stylesheet" href="./../../business_solutions/bs_style.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
+
     <script id="mock_dss">
         function getWebAppBackendUrl(path){
             path = path.replace('/fetch/commons', '');
